--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       </ul>
         <span class="search ">
           <input type="text" class="input-search blue" name="search-box" id="search-box" placeholder="white-shi">
-          <span class="fa fa-search"></span>
+          
         </span>
         <ul>
           <li >
@@ -46,7 +46,7 @@
           <li><a href="#">Contact Us</a></li>
         <li class="hover-card">
           <div>
-            <a href="#" class="btn"><i class="ico-circle small-txt fa fa-shopping-bag bag"></i>$25.00</a>
+            <a href="#" class="btn"><i class="ico-circle small-txt fa fa-shopping-bag bag"><span class="circle"></span>$25.00</i></a>
           </div>
           <div class="out-card">
             <span class="notch-up"></span>
@@ -298,10 +298,10 @@
         <div class="card1">
           <h3 class="center">NEWSLETTER</h3>
           <p class="small-txt center">We are Promising ,We will not spam
-          <span class="search ">
+          <div class="search flex-container box">
               <input type="text" class="input-search black center" name="search-box" id="search-box" placeholder="Subscribe to newsletter">
               <span class="fa fa-arrow-right"></span>
-          </span>
+          </div>
         </p>
         </div>
       </section>
@@ -309,62 +309,77 @@
       <ul>
           <li>
             <a href="#">
-              <img src="https://via.placeholder.com/140x80/09faaa/fff.png" alt="logo" class="image i1">
+              <img src="https://via.placeholder.com/140x80/fff/fff.png" alt="logo" class="image i1">
             </a>
           </li>
           <li>
               <a href="#">
-                <img src="https://via.placeholder.com/140x80/09faaa/fff.png" alt="logo" class="image i2">
+                <img src="https://via.placeholder.com/140x80/fff/fff.png" alt="logo" class="image i2">
               </a>
           </li>
           <li>
               <a href="#">
-                <img src="https://via.placeholder.com/140x80/09faaa/fff.png" alt="logo" class="image i3">
+                <img src="https://via.placeholder.com/140x80/fff/fff.png" alt="logo" class="image i3">
               </a>
           </li>
           <li>
               <a href="#">
-                <img src="https://via.placeholder.com/140x80/09faaa/fff.png" alt="logo" class="image i4">
+                <img src="https://via.placeholder.com/140x80/fff/fff.png" alt="logo" class="image i4">
               </a>
           </li>
           <li>
               <a href="#">
-                <img src="https://via.placeholder.com/140x80/09faaa/fff.png" alt="logo" class="image i5">
+                <img src="https://via.placeholder.com/140x80/fff/fff.png" alt="logo" class="image i5">
               </a>
           </li>
         </ul>
       </div>
 
     </main>
-    <section class="section-links flex-container side-padding">
+    <section class="section-links flex-container">
+      <ul class="links-wrap">
+        <li>
         <ul class="links">
-            <h2 class="blue-txt">We SHOP</h2>
+            <li><h2 class="blue-txt">We SHOP</h2></li>
             <li><a href="#">USA Most Loved Online shopping store featuring New deals</a></li>
             <li><a href="#">When it comes to Trend , We Love Being in it - seeping everybit of WeSHOP.com</a></li>
         </ul>
+      </li>
+      <li>
         <ul class="links">
-            <h2>SUPPORT</h2>
+            <li><h2>SUPPORT</h2></li>
             <li><a href="#">How to order</a></li>
             <li><a href="#">Payment</a></li>
             <li><a href="#">Receipt</a></li>
             <li><a href="#">Delivery</a></li>
         </ul>
+      </li>
+      <li>
         <ul class="links">
-            <h2>Duties</h2>
+            <li><h2>Duties</h2></li>
             <li><a href="#">Terms and Conditions</a></li>
             <li><a href="#">Shop Policy</a></li>
             <li><a href="#">contact us</a></li>
 
         </ul>
-        <div class="links">
-            <h2>Instagram Stories</h2>
+        </li>
+        <li>
+        <ul class="links">
+            <li><h2>Instagram Stories</h2></li>
             
           <div class="imgs">
               <img src="https://via.placeholder.com/300?Text=dp" class="img-small">
               <img src="https://via.placeholder.com/300?Text=dp" class="img-small">
               <img src="https://via.placeholder.com/300?Text=dp" class="img-small">
               <img src="https://via.placeholder.com/300?Text=dp" class="img-small">
-          </div>  
+          </div>
+          <div class="flex-wrap center">
+              <span class="line bottom"></span>
+          </div>
+          <div class="flex-wrap center">
+              <span class="line bottom"></span>
+          </div>
+          </li>
           <!--<div class="logos">
             <a href="#">
                 <span class=" fa fa-credit-card black"></span>
@@ -380,6 +395,7 @@
             </a>
           </div>-->
       </div>
+    </ul>
     </section>
 
 
