--- a/shipping.html
+++ b/shipping.html
@@ -18,7 +18,7 @@
       </ul>
         <span class="search ">
           <input type="text" class="input-search blue" name="search-box" id="search-box" placeholder="white-shi">
-          <span class="fa fa-search"></span>
+
         </span>
         <ul>
           <li >
@@ -46,7 +46,7 @@
           <li><a href="#">Contact Us</a></li>
         <li class="hover-card">
           <div>
-            <a href="#" class="btn"><i class="ico-circle small-txt fa fa-shopping-bag bag"></i>$25.00</a>
+            <a href="#" class="btn"><i class="ico-circle small-txt fa fa-shopping-bag bag">$25.00</i></a>
           </div>
           <div class="out-card">
               <span class="notch-up"></span>
