--- a/index.html
+++ b/index.html
@@ -298,7 +298,7 @@
         <div class="card1">
           <h3 class="center">NEWSLETTER</h3>
           <p class="small-txt center">We are Promising ,We will not spam
-          <div class="search flex-container box">
+          <div class="news flex-container box">
               <input type="text" class="input-search black center" name="search-box" id="search-box" placeholder="Subscribe to newsletter">
               <span class="fa fa-arrow-right"></span>
           </div>
