--- a/shipping.html
+++ b/shipping.html
@@ -181,10 +181,10 @@
                                 
                               </li>
                               <li>
-                                <a class="btn submit full " href="#">Continue</a>
+                                <a class="btn submit center full " href="#">Continue</a>
                               </li>
                               <li>
-                                <a class="btn blue btn-log-in full " href="checkout.html">Checkout</a>
+                                <a class="btn blue center btn-log-in full " href="checkout.html">Checkout</a>
                               </li>
                       </ul>
                     </div>
@@ -197,7 +197,7 @@
         <div class="card1">
             <h3 class="center">NEWSLETTER</h3>
             <p class="small-txt center">We are Promising ,We will not spam
-            <div class="search flex-container box">
+            <div class="news flex-container box">
                 <input type="text" class="input-search black center" name="search-box" id="search-box" placeholder="Subscribe to newsletter">
                 <span class="fa fa-arrow-right"></span>
             </div>
