--- a/shipping.html
+++ b/shipping.html
@@ -46,7 +46,7 @@
           <li><a href="#">Contact Us</a></li>
         <li class="hover-card">
           <div>
-            <a href="#" class="btn"><i class="ico-circle small-txt fa fa-shopping-bag bag">$25.00</i></a>
+            <a href="#" class=" "><i class="ico-circle small-txt fa fa-shopping-bag bag">$25.00</i></a>
           </div>
           <div class="out-card">
               <span class="notch-up"></span>
