--- a/product.html
+++ b/product.html
@@ -126,7 +126,20 @@
               Add a Review
             </div>
           </div>
-        <p class="clearfix small-txt blue-txt desc">Lorem Ipsum sit amet lorem ipsum lorem ipsum</p>
+          <div>
+        <p class="clearfix small-txt blue-txt desc">Lorem Ipsum sit amet lorem ipsum lorem ipsum
+            Lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum 
+            lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum 
+        </p>
+      </div>
+      <div class="flex-wrap left white" style="background:transparent">
+          <a href="#"><span class="ico-circle fa fa-facebook-f"></span></a>
+          <a href="#"><span class="ico-circle fa fa-twitter"></span></a>
+          <a href="#"><span class="ico-circle fa blue-ico fa-linkedin"></span></a>
+          <a href="#"><span class="ico-circle fa fa-youtube"></span></a>
+          <a href="#"><span class="ico-circle fa fa-google-plus"></span></a>
+          
+      </div>
     </div>
     </section>
     <div class="section7 Featured bg-grey">
