--- a/product.html
+++ b/product.html
@@ -132,6 +132,20 @@
             lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum 
         </p>
       </div>
+      <div class="btn-wrapper">
+        <div class="">
+
+        </div>
+        <div class="">
+          
+          </div>
+          <div class="">
+          
+            </div>
+      </div>
+      <p class="grey underline">
+        SHARE
+      </p>
       <div class="flex-wrap left white" style="background:transparent">
           <a href="#"><span class="ico-circle fa fa-facebook-f"></span></a>
           <a href="#"><span class="ico-circle fa fa-twitter"></span></a>
