--- a/slate/index.html
+++ b/slate/index.html
@@ -10,9 +10,10 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" type="text/css" href="styles/main.min.css">
     <title>Slate</title>
-    <script src="https://cdn.jsdelivr.net/npm/@simonwep/pickr/dist/pickr.min.js"></script>
+    <!-- <script src="https://cdn.jsdelivr.net/npm/@simonwep/pickr/dist/pickr.min.js"></script> -->
     <script src="https://cdn.jsdelivr.net/npm/@simonwep/pickr/dist/pickr.es5.min.js"></script>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@simonwep/pickr/dist/themes/nano.min.css" />
+    <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@simonwep/pickr/dist/themes/nano.min.css" /> -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@simonwep/pickr/dist/themes/monolith.min.css"/>
 
     <script type="text/javascript" src="https://cdn.fusioncharts.com/fusioncharts/latest/fusioncharts.js"></script>
     <script type="text/javascript"
@@ -133,28 +134,15 @@
             </div>
         </main>
         <aside id="aside-menu-wraper" class="aside-menu-wraper" style="display: none">
-            <!-- <div id="aside-menu-wraper" class="aside-menu-wraper"> -->
             <div id="aside-menu" class="aside-menu">
 
             </div>
-            <!-- </div> -->
         </aside>
     </div>
-</body>
-<!-- 
-<script src="js/render.js"></script>
-<script src="js/aside/edit_json.js"></script>
-<script src="js/aside/exportHTML.js"></script>
-<script src="js/aside/handleClicks.js"></script>
-<script src="js/createchart.js"></script>
-<script src="js/filterLink.js"></script>
-<script src="js/dataSource.js"></script>
-<script src="js/aside/accordian.js"></script>
-<script src="js/aside/asideDataDesc.js"></script>
-<script src="js/render.js"></script>
-<script src="js/snackbar.js"></script>
-<script src="js/index.js"></script> -->
-<script src="js/slate.js"></script>
-<!-- <script src="js/slate.min.js"></script> -->
 
+    <!-- development mode -->
+    <!-- <script src="js/slate.js"></script> -->
+
+    <script src="js/slate.min.js"></script>
+</body>
 </html>
