--- a/slate/index.html
+++ b/slate/index.html
@@ -141,8 +141,8 @@
     </div>
 
     <!-- development mode -->
-    <!-- <script src="js/slate.js"></script> -->
+    <script src="js/slate.js"></script>
 
-    <script src="js/slate.min.js"></script>
+    <!-- <script src="js/slate.min.js"></script> -->
 </body>
 </html>
