--- a/slate/index.html
+++ b/slate/index.html
@@ -12,8 +12,8 @@
     <title>Slate</title>
     <!-- <script src="https://cdn.jsdelivr.net/npm/@simonwep/pickr/dist/pickr.min.js"></script> -->
     <script src="https://cdn.jsdelivr.net/npm/@simonwep/pickr/dist/pickr.es5.min.js"></script>
-    <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@simonwep/pickr/dist/themes/nano.min.css" /> -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@simonwep/pickr/dist/themes/monolith.min.css"/>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@simonwep/pickr/dist/themes/nano.min.css" />
+    <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@simonwep/pickr/dist/themes/monolith.min.css"/> -->
 
     <script type="text/javascript" src="https://cdn.fusioncharts.com/fusioncharts/latest/fusioncharts.js"></script>
     <script type="text/javascript"
@@ -55,6 +55,11 @@
                     <li>
                         <a href="#!" id="btn-export-html" title="Export HTML">
                             <span class="fa fa-download"></span>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#!" id="btn-export-html" title="Delete Chart" onclick="clearSession()">
+                            <span class="fa fa-trash"></span>
                         </a>
                     </li>
                 </ul>
